<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio">

    <!-- Logo e ícono para editar-->
    <!--<ImageView
        android:layout_height="50dp"
        android:layout_width="120dp"
        android:src="@drawable/logoapp"
        android:contentDescription="@string/logoapp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp" />-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".Inicio">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/first_phrase"
                android:textColor="@color/primary_color"
                android:textSize="20sp"
                android:textStyle="bold" />



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/images_places"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/card_images_places"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/second_phrase"
            android:layout_marginTop="10dp"
            android:textColor="@color/primary_color"
            android:textSize="20sp"
            android:textStyle="bold"

            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/circles_images_places"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/card_circle_images_places"

            />


    </LinearLayout>

    <!-- Bottom navbar -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".Perfil_guia">

        <TextView
            android:layout_width="415dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_corners"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <!-- Img/Botón -->

        <!-- Favoritos -->
        <ImageButton
            android:id="@+id/imageView3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_corners"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            tools:ignore="MissingConstraints" />

        <!-- Travel -->
        <ImageButton
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_corners"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_baseline_home_repair_service_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            tools:ignore="MissingConstraints" />

        <!-- Home -->
        <ImageButton
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_corners"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_baseline_home_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <!-- Mensajes -->
        <ImageButton
            android:id="@+id/imageView4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_corners"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_baseline_chat_bubble_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            tools:ignore="MissingConstraints" />

        <!-- Usuario -->
        <ImageButton
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_corners"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_baseline_account_circle_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

        <!--<com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            app:labelVisibilityMode="unlabeled"
            app:menu="@menu/bottom_nav_menu"
            style="@style/LifeXperience.BottomNavigationView"/>-->

    <!--AppBar-->
    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:openDrawer="start"
        android:fitsSystemWindows="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    app:navigationIcon="@drawable/menu"
                    android:id="@+id/app_bar"
                    style="@style/Widget.Toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:title="@string/app_name" />
            </com.google.android.material.appbar.AppBarLayout>
        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            app:headerLayout="@layout/drawer_header"
            android:id="@+id/nav_view"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            app:menu="@menu/drawer_menu" />
    </androidx.drawerlayout.widget.DrawerLayout>

</RelativeLayout>